syntax = "proto3";

package com.taotao.cloud.log.api.grpc;

option java_multiple_files = true;
option java_package = "com.taotao.cloud.log.api.grpc";
option java_outer_classname = "DeviceFixProto";
//option objc_class_prefix = "HLW";

service LogGrpcService {
  rpc insertLog (Log) returns (BooleanReply){}
  rpc updateLog (Log) returns (BooleanReply){}
  rpc searchLog (LogRequest) returns (Log){}
  rpc deleteLog (LogRequest) returns (BooleanReply){}
}

message LogRequest {
  string id = 1;
}

message Log {
  string id = 1;
  string serialNum = 2;
  string userNum = 3;
  int32  status = 4;
  int32  type = 5;
  string address = 6;
  string createtime = 7;
  string updatetime = 8;
}

message BooleanReply {
  bool reply = 1;
}

message ObjectReply {
  bool reply = 1;
}
